# djangoProject_hw_19_2

./: db.sqlite3  manage.py  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_student_is_active.py
catalog/templates/catalog/: home_page.html  info_contact_page.html
djangoProject_hw_19_2/: asgi.py  settings.py  urls.py  wsgi.py
